--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -2491,6 +2491,24 @@
     "motorsEnableControl": {
         "message": "<strong>I understand the risks</strong>, the propellers are removed - enable motor control and arming, and disable Runaway Takeoff Prevention."
     },
+    "motorRemapDialogClose": {
+        "message": "Close"
+    },
+    "motorRemapDialogAgree": {
+        "message": "Next (spin motors)"
+    },
+    "motorsRemapDialogTitle": {
+        "message": "Remap motors"
+    },
+    "motorRemapDialogOpen": {
+        "message": "Remap motors"
+    },
+    "motorRemapDialogSelectSpinningMotor": {
+        "message": "Click on the spining motor..."
+    },
+    "motorRemapDialogRemapIsDone": {
+        "message": "Motors being remapped."
+    },
 
     "sensorsInfo": {
         "message": "Keep in mind that using fast update periods and rendering multiple graphs at the same time is resource heavy and will burn your battery quicker if you use a laptop.<br />We recommend to only render graphs for sensors you are interested in while using reasonable update periods."
