--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -6125,5 +6125,57 @@
     },
     "cordovaExitAppMessage": {
         "message": "Do you really want to close the configurator?"
+    },
+    "dropDownSelectAll": {
+        "message": "[Select all]",
+        "description": "Select all item in the drop down/multiple select"
+    },
+    "dropDownAll": {
+        "message": "All",
+        "description": "Text indicating everything is selected in the drop down/multiple select"
+    },
+    "tabPresets": {
+        "message": "Presets",
+        "description": "Presets tab title"
+    },
+    "tabPresetsSearch": {
+        "message": "Search",
+        "description": "Hint text in front of the search text input for presets search"
+    },
+    "presetsFilterIncludeOfficialOnly": {
+        "message": "Official only",
+        "description": "Hint text in front of the checkbox for presets search"
+    },
+    "presetsAuthor": {
+        "message": "Author:",
+        "description": "Hint text in the presets detailed dialog"
+    },
+    "presetsKeywords": {
+        "message": "Keywords:",
+        "description": "Hint text in the presets detailed dialog"
+    },
+    "presetsVersions": {
+        "message": "Firmware:",
+        "description": "Hint text in the presets detailed dialog"
+    },
+    "presetsOfficial": {
+        "message": "Official",
+        "description": "Hint text in the presets detailed dialog indication preset is official"
+    },
+    "presetsNotOfficial": {
+        "message": "Community",
+        "description": "Hint text in the presets detailed dialog indication preset is not official"
+    },
+    "presetsApply": {
+        "message": "Apply",
+        "description": "Button to apply a preset"
+    },
+    "presetsShowHideCli": {
+        "message": "CLI show/hide",
+        "description": "Button to show / hide CLI window on presets tab"
+    },
+    "presetsViewOnGithub": {
+        "message": "View on GitHub",
+        "description": "Link text for opening preset file on GitHub"
     }
 }
